fix tutorial compiled against different numpy

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -88,6 +88,7 @@
       },
       "outputs": [],
       "source": [
+        "!pip install numpy --upgrade\n",
         "!pip install dm-tree\n",
         "!pip install dm-reverb[tensorflow]"
       ]
